# PlotWriter

./: .gitignore  CMakeLists.txt  generate_build_vc2022.bat  main.cpp
Include/Model/: Model.ApplicationContext.h  Model.Document.h  Model.ResultComparison.h  Model.SignalProcessing.h  NewRun.h
Include/Model/Common/: Model.ErrorReporter.h  Model.Functions.h  Model.Object.h  Model.RJUtilities.h  Model.Utilities.h
Include/Model/Plots/: Model.Graph.h  Model.Plot.h  Model.PlotCollection.h
Include/Model/Runs/: Model.Aerodynamics.h  Model.CFDPressureData.h  Model.Quantity.h  Model.RunResult.h  Model.RunSignals.h  Model.RunsInfo.h
PlotWriter/: PlotWriter.vcxproj
Source/Model/: Model.ApplicationContext.cpp  Model.Document.cpp  Model.ResultComparison.cpp  Model.SignalProcessing.cpp  NewRun.cpp
Source/Model/Common/: Model.ErrorReporter.cpp  Model.Functions.cpp  Model.Object.cpp  Model.RJUtilities.cpp  Model.Utilities.cpp
Source/Model/Plots/: Model.Graph.cpp  Model.Plot.cpp  Model.PlotCollection.cpp
Source/Model/Runs/: Model.Aerodynamics.cpp  Model.CFDPressureData.cpp  Model.Quantity.cpp  Model.RunResult.cpp  Model.RunSignals.cpp  Model.RunsInfo.cpp
